--- a/external_ip_monitor/external_ip_monitor.csproj
+++ b/external_ip_monitor/external_ip_monitor.csproj
@@ -47,6 +47,8 @@
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="Mono.Posix" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
